styles/Interests.css
.anim {
    @apply opacity-0 transition-all duration-700 -translate-x-full
}

.animate-project {
    @apply !opacity-100 translate-x-0
}

/* ? Staggered transitions for 2 */
@media (min-width: 1150px) {
.anim:nth-child(2){
transition-delay: 200ms;
}

.anim:nth-child(3){
  transition-delay: 400ms;
}
.anim:nth-child(4){
  transition-delay: 0ms;
}
.anim:nth-child(5){
  transition-delay: 200ms;
}
.anim:nth-child(6) {
    transition-delay: 400ms;
}}

/* ? Staggered transitions for 2 */
@media (min-width: 767px) and (max-width: 1150px)  {
    .anim:nth-child(2) {
        transition-delay: 200ms;
    }

    .anim:nth-child(3) {
        transition-delay: 00ms;
    }

    .anim:nth-child(4) {
        transition-delay: 200ms;
    }

    .anim:nth-child(5) {
        transition-delay: 0ms;
    }

    .anim:nth-child(6) {
        transition-delay: 200ms;
    }
}

